--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
 
     <footer>
         <div class="container">
-            <p>מחקר וכתיבה: צוות החקירה המיוחד | עיצוב ופיתוח: פרויקט מיוחד 2025</p>
-            <p style="font-size: 0.9rem; opacity: 0.7;">נבנה כדי להאיר את האמת. כל הזכויות שמורות.</p>
+            <p>מחקר, כתיבה, עיצוב ופיתוח: זאביק אבינר</p>
+            <p style="font-size: 0.9rem; opacity: 0.7;">כל הזכויות שמורות © 2025</p>
         </div>
     </footer>
 
