--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <div class="container">
                 <h2 class="section-title fade-in-up">פיצוח מיתוס "פערי התיווך"</h2>
                 <h3 class="fade-in-up">הסיטונאים החדשים: רשתות השיווק</h3>
-                <p class="fade-in-up">כאשר רשתות השיווק טוענות שהרווח שלהן על פירות וירקות נמוך, הן צודקות טכנית אך מטעות מהותית. הסיבה לכך היא שהן הפכו לסיטונאי של עצמן. המרכז הלוגיסטי (מרלו"ג) של הרשת הוא חטיבה סיטונאית לכל דבר: הוא קונה מהחקלאי, מוסיף את כל עלויות התפעול האדירות שלו (שינוע, קירור, מיון, ובמיוחד עלות הבזבוז והפחת), ורק אז "מוכר" את הסחורה לחנויות הרשת במחיר פנימי גבוה. החנות, שקונה במחיר גבוה, נשארת עם מרווח קטן. בפועל, **כל חוסר היעילות של המערך הסיטונאי מגולגל ישירות למחיר לצרכן**, והרווח הנמוך בחנות הוא רק אשליה חשבונאית, המתאפשרת בזכות היעדר תחרות המאלצת אותם להתייעל.</p>
+                <p class="fade-in-up">כאשר רשתות השיווק טוענות שהרווח שלהן על פירות וירקות נמוך, הן צודקות טכנית אך מטעות מהותית. הסיבה לכך היא שהן הפכו לסיטונאי של עצמן. המרכז הלוגיסטי (מרלו"ג) של הרשת הוא חטיבה סיטונאית לכל דבר: הוא קונה מהחקלאי, מוסיף את כל עלויות התפעול האדירות שלו (שינוע, קירור, מיון, ובמיוחד עלות הבזבוז והפחת), ורק אז "מוכר" את הסחורה לחנויות הרשת במחיר פנימי גבוה. החנות, שקונה במחיר גבוה, נשארת עם מרווח קטן. בפועל, <strong>כל חוסר היעילות של המערך הסיטונאי מגולגל ישירות למחיר לצרכן</strong>, והרווח הנמוך בחנות הוא רק אשליה חשבונאית, המתאפשרת בזכות היעדר תחרות המאלצת אותם להתייעל.</p>
 
                 <div class="data-hub fade-in-up">
                     <h3 style="color:white; text-align:center; border:none;">מספרי מפתח</h3>
@@ -627,7 +627,7 @@
              <div class="container">
                 <h2 class="section-title fade-in-up">הקרטל החוקי: מי באמת מרוויח?</h2>
                 <p class="fade-in-up">הפטור מחוק התחרות מאפשר למגדלים הגדולים, דרך מועצת הצמחים, לתאם כמויות ולהבטיח מחיר גבוה ויציב. אך האם מחיר זה משרת את החקלאי הקטן? התשובה היא לא. למעשה, הוא מנציח את נחיתותו. השליטה של המגדלים הגדולים במועצת הצמחים אינה מקרית - היא נובעת מכוחם הארגוני והפוליטי. הם אלו ששולחים נציגים קבועים לוועדות, מפעילים לובי ומשפיעים על קבלת ההחלטות, בעוד החקלאי הקטן עסוק בעבודת השדה היומיומית וקולו אינו נשמע.</p>
-                <p class="fade-in-up">לחקלאי הגדול יש עלויות ייצור נמוכות (יתרון לגודל), ולכן מחיר מכירה גבוה מתורגם אצלו לרווחי עתק. לעומת זאת, החקלאי הקטן מתמודד עם עלויות ייצור גבוהות, ואותו מחיר בדיוק בקושי מאפשר לו לשרוד. המחיר הגבוה, אם כן, אינו "רשת ביטחון" לחלשים, אלא **מנגנון להבטחת רווחיות מקסימלית לחזקים ביותר**, כל זאת על חשבון הצרכנים.</p>
+                <p class="fade-in-up">לחקלאי הגדול יש עלויות ייצור נמוכות (יתרון לגודל), ולכן מחיר מכירה גבוה מתורגם אצלו לרווחי עתק. לעומת זאת, החקלאי הקטן מתמודד עם עלויות ייצור גבוהות, ואותו מחיר בדיוק בקושי מאפשר לו לשרוד. המחיר הגבוה, אם כן, אינו "רשת ביטחון" לחלשים, אלא <strong>מנגנון להבטחת רווחיות מקסימלית לחזקים ביותר</strong>, כל זאת על חשבון הצרכנים.</p>
             </div>
         </section>
 
