--- a/index.html
+++ b/index.html
@@ -568,16 +568,19 @@
                     <div class="card fade-in-up" style="transition-delay: 0.1s;">
                         <div class="icon">📜</div>
                         <h4>1. כשל רגולטורי</h4>
+                        <h4>3. כשל רגולטורי <span style="font-weight:400; font-size:1rem;">(הניצול האופורטוניסטי)</span></h4>
                         <p><strong>קרטל בחסות החוק.</strong> סעיף בחוק התחרות מעניק פטור לחקלאות מאיסור על תיאום מחירים. בפועל, זה מאפשר לארגוני המגדלים הגדולים להגביל את ההיצע באופן מלאכותי ולקבוע רצפת מחיר גבוהה לכולם.</p>
                     </div>
                     <div class="card fade-in-up" style="transition-delay: 0.2s;">
                         <div class="icon">🏛️</div>
                         <h4>2. כשל תשתיתי</h4>
+                        <h4>1. כשל תשתיתי <span style="font-weight:400; font-size:1rem;">(החטא הקדמון)</span></h4>
                         <p><strong>היעדר שוק סיטונאי.</strong> מאז 2006, ישראל פועלת ללא שוק סיטונאי מרכזי. הוואקום שנוצר העביר כוח עצום לרשתות השיווק, מנע תחרות, והפך את בזבוז המזון לחלק מובנה במודל העסקי.</p>
                     </div>
                     <div class="card fade-in-up" style="transition-delay: 0.3s;">
                         <div class="icon">⚖️</div>
                         <h4>3. כשל מבני</h4>
+                        <h4>2. כשל מבני <span style="font-weight:400; font-size:1rem;">(התוצאה הישירה)</span></h4>
                         <p><strong>כוח ריכוזי לא שווה.</strong> חקלאי קטן ובודד עומד לבדו מול קניין ריכוזי וחזק (רשת השיווק) שמכתיב לו תנאים דורסניים כמו מכירה בקונסיגנציה (תשלום רק על מה שנמכר), וכל זאת במחיר בסיס שנקבע על ידי הקרטל.</p>
                     </div>
                 </div>
@@ -587,8 +590,9 @@
         <section id="wholesalers">
             <div class="container">
                 <h2 class="section-title fade-in-up">פיצוח מיתוס "פערי התיווך"</h2>
-                <h3 class="fade-in-up">הסיטונאים החדשים: רשתות השיווק</h3>
-                <p class="fade-in-up">כאשר רשתות השיווק טוענות שהרווח שלהן על פירות וירקות נמוך, הן צודקות טכנית אך מטעות מהותית. הסיבה לכך היא שהן הפכו לסיטונאי של עצמן. המרכז הלוגיסטי (מרלו"ג) של הרשת הוא חטיבה סיטונאית לכל דבר: הוא קונה מהחקלאי, מוסיף את כל עלויות התפעול האדירות שלו (שינוע, קירור, מיון, ובמיוחד עלות הבזבוז והפחת), ורק אז "מוכר" את הסחורה לחנויות הרשת במחיר פנימי גבוה. החנות, שקונה במחיר גבוה, נשארת עם מרווח קטן. בפועל, <strong>כל חוסר היעילות של המערך הסיטונאי מגולגל ישירות למחיר לצרכן</strong>, והרווח הנמוך בחנות הוא רק אשליה חשבונאית, המתאפשרת בזכות היעדר תחרות המאלצת אותם להתייעל.</p>
+                <h3 class="fade-in-up">הסיטונאים החדשים: עלותה של חוסר יעילות</h3>
+                <p class="fade-in-up">כאשר רשתות השיווק טוענות שהרווח שלהן על פירות וירקות נמוך, הן צודקות טכנית אך מטעות מהותית. הסיבה לכך היא שהן הפכו לסיטונאי של עצמן. המרכז הלוגיסטי (מרלו"ג) של הרשת הוא חטיבה סיטונאית לכל דבר: הוא קונה מהחקלאי, מוסיף את כל עלויות התפעול האדירות שלו (שינוע, קירור, מיון, ובמיוחד עלות הבזבוז והפחת), ורק אז "מוכר" את הסחורה לחנויות הרשת במחיר פנימי גבוה. החנות, שקונה במחיר גבוה, נשארת עם מרווח קטן.</p>
+                <p class="fade-in-up" style="margin-top:1.5em;"><strong>אבל מדוע העלויות של המרלו"ג כל כך גבוהות?</strong> בגלל חוסר יעילות ובזבוז עצום. המרלו"גים יכולים להרשות לעצמם לפעול כך <strong>מכיוון שאין להם תחרות ואין להם מדד ייחוס (בנצ'מרק) חיצוני</strong>. שוק סיטונאי מתפקד היה מכריח אותם להתייעל. בהיעדרו, הם יכולים לגלגל 100% מעלות חוסר היעילות שלהם לצרכן ללא כל השלכות.</p>
 
                 <div class="data-hub fade-in-up">
                     <h3 style="color:white; text-align:center; border:none;">מספרי מפתח</h3>
@@ -612,7 +616,7 @@
         
         <section id="myth-busting">
             <div class="container">
-                <h2 class="section-title fade-in-up">פיצוח מיתוס "פערי התיווך"</h2>
+                <!-- כותרת זו כבר מופיעה בסקשן הקודם, לכן הוסרה כאן -->
                 <p class="fade-in-up">אחת הטענות הנפוצות ביותר בציבור היא שהרשתות "חומדות" ומרוויחות הרבה מדי על פירות וירקות. הנתונים מראים תמונה שונה: הרווח הקמעונאי על פירות וירקות אכן נמוך יחסית למוצרים אחרים. אבל זו רק חצי האמת, והחצי הזה מסתיר את הבעיה האמיתית.</p>
                 
                 <blockquote class="myth-quote fade-in-up">
