Remove duplicate and incorrect numbering in failures section cards; each card now has a single, correctly numbered title

--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
             font-size: 1.1rem;
             font-weight: 400;
             opacity: 0.9;
+            text-align: center;
         }
         
         /* --- כרטיסי נתונים קטנים במבוא --- */
@@ -567,20 +568,17 @@
                 <div class="card-grid">
                     <div class="card fade-in-up" style="transition-delay: 0.1s;">
                         <div class="icon">📜</div>
-                        <h4>1. כשל רגולטורי</h4>
-                        <h4>3. כשל רגולטורי <span style="font-weight:400; font-size:1rem;">(הניצול האופורטוניסטי)</span></h4>
+                        <h4>1. כשל רגולטורי <span style="font-weight:400; font-size:1rem;">(הניצול האופורטוניסטי)</span></h4>
                         <p><strong>קרטל בחסות החוק.</strong> סעיף בחוק התחרות מעניק פטור לחקלאות מאיסור על תיאום מחירים. בפועל, זה מאפשר לארגוני המגדלים הגדולים להגביל את ההיצע באופן מלאכותי ולקבוע רצפת מחיר גבוהה לכולם.</p>
                     </div>
                     <div class="card fade-in-up" style="transition-delay: 0.2s;">
                         <div class="icon">🏛️</div>
-                        <h4>2. כשל תשתיתי</h4>
-                        <h4>1. כשל תשתיתי <span style="font-weight:400; font-size:1rem;">(החטא הקדמון)</span></h4>
+                        <h4>2. כשל תשתיתי <span style="font-weight:400; font-size:1rem;">(החטא הקדמון)</span></h4>
                         <p><strong>היעדר שוק סיטונאי.</strong> מאז 2006, ישראל פועלת ללא שוק סיטונאי מרכזי. הוואקום שנוצר העביר כוח עצום לרשתות השיווק, מנע תחרות, והפך את בזבוז המזון לחלק מובנה במודל העסקי.</p>
                     </div>
                     <div class="card fade-in-up" style="transition-delay: 0.3s;">
                         <div class="icon">⚖️</div>
-                        <h4>3. כשל מבני</h4>
-                        <h4>2. כשל מבני <span style="font-weight:400; font-size:1rem;">(התוצאה הישירה)</span></h4>
+                        <h4>3. כשל מבני <span style="font-weight:400; font-size:1rem;">(התוצאה הישירה)</span></h4>
                         <p><strong>כוח ריכוזי לא שווה.</strong> חקלאי קטן ובודד עומד לבדו מול קניין ריכוזי וחזק (רשת השיווק) שמכתיב לו תנאים דורסניים כמו מכירה בקונסיגנציה (תשלום רק על מה שנמכר), וכל זאת במחיר בסיס שנקבע על ידי הקרטל.</p>
                     </div>
                 </div>
@@ -595,7 +593,7 @@
                 <p class="fade-in-up" style="margin-top:1.5em;"><strong>אבל מדוע העלויות של המרלו"ג כל כך גבוהות?</strong> בגלל חוסר יעילות ובזבוז עצום. המרלו"גים יכולים להרשות לעצמם לפעול כך <strong>מכיוון שאין להם תחרות ואין להם מדד ייחוס (בנצ'מרק) חיצוני</strong>. שוק סיטונאי מתפקד היה מכריח אותם להתייעל. בהיעדרו, הם יכולים לגלגל 100% מעלות חוסר היעילות שלהם לצרכן ללא כל השלכות.</p>
 
                 <div class="data-hub fade-in-up">
-                    <h3 style="color:white; text-align:center; border:none;">מספרי מפתח</h3>
+                    <h3 style="color:white; text-align:center; border:none; width:100%; display:block;">מספרי מפתח</h3>
                     <div class="data-grid">
                         <div class="data-item">
                             <div class="stat-number" data-target="80">0</div>
